--- a/videos.html
+++ b/videos.html
@@ -5,10 +5,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Videos | The Cutty Corner</title>
-  <link rel="stylesheet" href="style.css?v=20260211-13">
+  <link rel="stylesheet" href="style.css?v=20260212-43">
 </head>
 
-<body>
+<body class="page-main">
   <div class="floating-frame">
     <!-- Banner that links home -->
     <a href="index.html">
