--- a/articles.html
+++ b/articles.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Articles | The Cutty Corner</title>
-  <link rel="stylesheet" href="style.css?v=20260211-13" />
+  <link rel="stylesheet" href="style.css?v=20260212-43" />
 </head>
-<body>
+<body class="page-main">
   <div class="floating-frame">
 
     <!-- Banner links back to homepage -->
