--- a/trips.html
+++ b/trips.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Trips | The Cutty Corner</title>
-  <link rel="stylesheet" href="style.css?v=20260211-13">
+  <link rel="stylesheet" href="style.css?v=20260212-43">
 </head>
-<body>
+<body class="page-main trips-page">
   <div class="floating-frame">
     <a href="index.html">
       <img src="images/title.png" alt="The Cutty Corner" class="site-banner">
