--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
           <li><a href="articles.html">Articles</a></li>
           <li><a href="trips.html">Trip Log</a></li>
           <li><a href="videos.html">Videos</a></li>
+          <li><a href="frogbags.html">Frog Bags</a></li>
           <li><a href="about.html">About</a></li>
         </ul>
       </nav>
